// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextBoxPicture render with big bottom margin 1`] = `
<div
  className="mfui-beta-text-box-picture mfui-beta-text-box-picture_margin_big_bottom_margin"
>
  <img
    className="mfui-beta-text-box-picture__img"
    src="#"
  />
</div>
`;

exports[`TextBoxPicture render with big top margin 1`] = `
<div
  className="mfui-beta-text-box-picture mfui-beta-text-box-picture_margin_big_top_margin"
>
  <img
    className="mfui-beta-text-box-picture__img"
    src="#"
  />
</div>
`;

exports[`TextBoxPicture render with big vertical margins 1`] = `
<div
  className="mfui-beta-text-box-picture mfui-beta-text-box-picture_margin_big_vertical_margin"
>
  <img
    className="mfui-beta-text-box-picture__img"
    src="#"
  />
</div>
`;

exports[`TextBoxPicture render with default props 1`] = `
<div
  className="mfui-beta-text-box-picture mfui-beta-text-box-picture_margin_default"
>
  <img
    className="mfui-beta-text-box-picture__img"
    src="#"
  />
</div>
`;
